[package]
name = "obelisk-amm"
version = "0.1.0"
description = "Obelisk DEX AMM Program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "obelisk_amm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
